# np_audio_control

./: .gitignore  README.md  pyproject.toml
src/np_audio_control/: __init__.py  setvol.py  utils.py
